Update to AppSettings.

--- a/DivinitySoftworks.Functions.Identity/appsettings.json
+++ b/DivinitySoftworks.Functions.Identity/appsettings.json
@@ -1,8 +1,8 @@
 {
   "Database": {
     "Credentials": {
-      "Key": "AKIAZQ3DPZD5G4A5CW4O",
-      "Secret": "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"
+      "Key": "",
+      "Secret": ""
     }
   },
   "Authorization": {
