--- a/DivinitySoftworks.Functions.Identity/serverless.template
+++ b/DivinitySoftworks.Functions.Identity/serverless.template
@@ -143,41 +143,6 @@
         }
       }
     },
-    "DSOpenIdGetJWSKAsync": {
-      "Type": "AWS::Serverless::Function",
-      "Metadata": {
-        "Tool": "Amazon.Lambda.Annotations",
-        "SyncedEvents": [
-          "RootGet"
-        ],
-        "SyncedEventProperties": {
-          "RootGet": [
-            "Path",
-            "Method"
-          ]
-        }
-      },
-      "Properties": {
-        "Runtime": "dotnet8",
-        "CodeUri": ".",
-        "MemorySize": 512,
-        "Timeout": 30,
-        "Policies": [
-          "AWSLambdaBasicExecutionRole"
-        ],
-        "PackageType": "Zip",
-        "Handler": "DivinitySoftworks.Functions.Identity::DS.Functions.Identity.OpenIdConnect_GetJWSKAsync_Generated::GetJWSKAsync",
-        "Events": {
-          "RootGet": {
-            "Type": "HttpApi",
-            "Properties": {
-              "Path": "/.well-known/openid-configuration/jwks",
-              "Method": "GET"
-            }
-          }
-        }
-      }
-    },
     "DSHealthGetHealthAsync": {
       "Type": "AWS::Serverless::Function",
       "Metadata": {
@@ -207,6 +172,41 @@
             "Type": "HttpApi",
             "Properties": {
               "Path": "/health",
+              "Method": "GET"
+            }
+          }
+        }
+      }
+    },
+    "DSOpenIdGetJWKS": {
+      "Type": "AWS::Serverless::Function",
+      "Metadata": {
+        "Tool": "Amazon.Lambda.Annotations",
+        "SyncedEvents": [
+          "RootGet"
+        ],
+        "SyncedEventProperties": {
+          "RootGet": [
+            "Path",
+            "Method"
+          ]
+        }
+      },
+      "Properties": {
+        "Runtime": "dotnet8",
+        "CodeUri": ".",
+        "MemorySize": 512,
+        "Timeout": 30,
+        "Policies": [
+          "AWSLambdaBasicExecutionRole"
+        ],
+        "PackageType": "Zip",
+        "Handler": "DivinitySoftworks.Functions.Identity::DS.Functions.Identity.OpenIdConnect_GetJWKS_Generated::GetJWKS",
+        "Events": {
+          "RootGet": {
+            "Type": "HttpApi",
+            "Properties": {
+              "Path": "/.well-known/openid-configuration/jwks",
               "Method": "GET"
             }
           }
