Added the creation security.txt file and a corresponding public key. These files have been securely stored in the designated locations.

--- a/DivinitySoftworks.Functions.Identity/appsettings.json
+++ b/DivinitySoftworks.Functions.Identity/appsettings.json
@@ -29,10 +29,38 @@
       "ACS": "https://identity.divinity-softworks.com/oauth/acs"
     }
   },
+  "Security": {
+    "Notify": [
+      "Michael Keeman <m.keeman@outlook.com>"
+    ],
+    "Contact": "divinity-softworks@outlook.com",
+    "ContactScheme": "mailto:",
+    "Canonical": [
+      "https://divinity-softworks.com/.well-known/security.txt",
+      "https://www.divinity-softworks.com/.well-known/security.txt",
+      "https://identity.divinity-softworks.com/.well-known/security.txt",
+      "https://mortgage.divinity-softworks.com/.well-known/security.txt",
+      "https://notification.divinity-softworks.com/.well-known/security.txt",
+      "https://apps.divinity-softworks.com/.well-known/security.txt"
+    ],
+    "Encryption": "https://divinity-softworks.com/.well-known/public-key.asc"
+  },
+  "AWS.S3": {
+    "Region": "eu-west-3",
+    "BucketName": "aws-bucket.divintysoftworks.www"
+  },
+  "AWS.SNS": {
+    "Region": "eu-west-3"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "Notification": {
+      "Recipient": "Michael Keeman <m.keeman@outlook.com>",
+      "Sender": "Identity @ Divinity Softworks <identity@divinity-softworks.com>",
+      "Subject":  "Error Report | Identity Service"
     }
   },
   "AllowedHosts": "*"
