--- a/DivinitySoftworks.Functions.Identity/DivinitySoftworks.Functions.Identity.csproj
+++ b/DivinitySoftworks.Functions.Identity/DivinitySoftworks.Functions.Identity.csproj
@@ -31,9 +31,14 @@
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.4" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="DivinitySoftworks.AWS.Core.Data.DynamoDB" Version="0.1.43" />
+    <PackageReference Include="DivinitySoftworks.AWS.Core.Net" Version="0.1.50" />
+    <PackageReference Include="DivinitySoftworks.AWS.Core.Net.EventBus" Version="0.1.45" />
+    <PackageReference Include="DivinitySoftworks.AWS.Core.Net.Storage" Version="0.1.57" />
     <PackageReference Include="DivinitySoftworks.AWS.Core.Web.Functions" Version="0.1.55" />
     <PackageReference Include="DivinitySoftworks.Core" Version="0.1.10" />
+    <PackageReference Include="DivinitySoftworks.Core.Net" Version="0.1.26" />
     <PackageReference Include="OneOf" Version="3.0.271" />
+    <PackageReference Include="PgpCore" Version="6.5.1" />
   </ItemGroup>
   <!-- 
     The FrameworkReference is used to reduce the deployment bundle size by not having to include 
