--- a/DivinitySoftworks.Functions.Identity/serverless.template
+++ b/DivinitySoftworks.Functions.Identity/serverless.template
@@ -212,6 +212,58 @@
           }
         }
       }
+    },
+    "DSSecurityCreateAsync": {
+      "Type": "AWS::Serverless::Function",
+      "Metadata": {
+        "Tool": "Amazon.Lambda.Annotations"
+      },
+      "Properties": {
+        "Runtime": "dotnet8",
+        "CodeUri": ".",
+        "MemorySize": 512,
+        "Timeout": 30,
+        "Policies": [
+          "AWSLambdaBasicExecutionRole"
+        ],
+        "PackageType": "Zip",
+        "Handler": "DivinitySoftworks.Functions.Identity::DS.Functions.Identity.Security_CreateAsync_Generated::CreateAsync"
+      }
+    },
+    "DSSecurityGetSecurityTextAsync": {
+      "Type": "AWS::Serverless::Function",
+      "Metadata": {
+        "Tool": "Amazon.Lambda.Annotations",
+        "SyncedEvents": [
+          "RootGet"
+        ],
+        "SyncedEventProperties": {
+          "RootGet": [
+            "Path",
+            "Method"
+          ]
+        }
+      },
+      "Properties": {
+        "Runtime": "dotnet8",
+        "CodeUri": ".",
+        "MemorySize": 512,
+        "Timeout": 30,
+        "Policies": [
+          "AWSLambdaBasicExecutionRole"
+        ],
+        "PackageType": "Zip",
+        "Handler": "DivinitySoftworks.Functions.Identity::DS.Functions.Identity.Security_GetSecurityTextAsync_Generated::GetSecurityTextAsync",
+        "Events": {
+          "RootGet": {
+            "Type": "HttpApi",
+            "Properties": {
+              "Path": "/.well-known/security.txt",
+              "Method": "GET"
+            }
+          }
+        }
+      }
     }
   },
   "Outputs": {
