--- a/DivinitySoftworks.Functions.Identity/appsettings.json
+++ b/DivinitySoftworks.Functions.Identity/appsettings.json
@@ -47,7 +47,11 @@
   },
   "AWS.S3": {
     "Region": "eu-west-3",
-    "BucketName": "aws-bucket.divintysoftworks.www"
+    "BucketName": "aws-bucket.divinity-softworks.www"
+  },
+  "AWS.CloudFront": {
+    "Region": "eu-west-3",
+    "DistributionId": "EM6ZNTEKTBCAV"
   },
   "AWS.SNS": {
     "Region": "eu-west-3"
@@ -60,7 +64,7 @@
     "Notification": {
       "Recipient": "Michael Keeman <m.keeman@outlook.com>",
       "Sender": "Identity @ Divinity Softworks <identity@divinity-softworks.com>",
-      "Subject":  "Error Report | Identity Service"
+      "Subject": "Error Report | Identity Service"
     }
   },
   "AllowedHosts": "*"
